--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="parent2">
   <div class="child2">
     <p class="submitted"> Submitted</p>
-    <p style="font-family: sans-serif; color:green; font size: 20px;">You can now close this page.</p>
+    <p style="font-family: sans-serif; color:green; font size: 20px;">Thank you!<span id="greeting"></span>You can now close this page.</p>
   </div>
 </div>
 <!-- partial -->
